--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>3-column preview card component</title>
 </head>
 <body>
-    <div class="container">
+    <main class="container">
         <ul>
             <li class="sedan">
                 <img src="images/icon-sedans.svg" alt="sedan car icon">
@@ -29,6 +29,6 @@
                 <button>Learn More</button>
             </li>
         </ul>
-    </div>
+    </main>
 </body>
 </html>
