Include a navigation button

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>3-column preview card component</title>
 </head>
 <body>
+    <a href="grid/grid.html"> <button class="nav-btn">Go To Grid</button> </a>
     <main class="container">
         <ul>
             <li class="sedan">
